# agentmail-arxiv-digest

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  WORKLOG.md  profiles.galactic.example.json  pyproject.toml
.github/workflows/: tests.yml
arxiv_digest/: __init__.py  cache.py  cleanup.py  cli.py  codex_backend.py  env.py  imap_mail.py  llm.py  mail.py  mail_cli.py  parser.py  profiles.py  ranker.py  render.py  send_log.py  smtp_sender.py  subscriptions.py  summary.py  triage.py
docs/: ARCHITECTURE.md  OPERATIONS.md
tests/: test_cache_summary_mail.py  test_cleanup.py  test_env.py  test_imap_mail.py  test_mail_cli.py  test_parser.py  test_ranker.py  test_render.py  test_send_log.py  test_smtp_sender.py  test_subscriptions.py
