[project]
name = "agentmail-arxiv-digest"
version = "0.1.0"
description = "Mailbox-driven personalized arXiv astro-ph digests."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Yunao Xiao"}
]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.scripts]
arxiv-digest = "arxiv_digest.cli:main"
arxiv-digest-mail = "arxiv_digest.mail_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
